--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "IMDb-Movie-Bot",
+    "name": "EvaMariaBot",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/JOSProjects/IMDb-Movie-Bot",
-    "repository": "https://github.com/JOSProjects/IMDb-Movie-Bot",
+    "website": "https://github.com/EvamariaTG/EvaMaria",
+    "repository": "https://github.com/EvamariaTG/EvaMaria",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -55,16 +55,36 @@
             "required": false
         },
         "DATABASE_URI": {
-            "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/nj-lJfkgb6w",
+            "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
         },
         "DATABASE_NAME": {
-            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/nj-lJfkgb6w",
+            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": false
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
+            "required": false
+        },
+        "DELETE_TIME":{
+            "description": "Time in seconds to delete the Messages. Defaults to 300 (5 minutes).",
+            "value": "300",
+            "required": false
+        },
+        "START_IMAGE_URL":{
+            "description": "Start image URL. Defaults to https://telegra.ph/file/85f36a9eb6c73c31bcded.jpg",
+            "value": "https://telegra.ph/file/85f36a9eb6c73c31bcded.jpg",
+            "required": false
+        },
+        "UNAUTHORIZED_CALLBACK_TEXT":{
+            "description": "Text to show when unauthorized user tries to use bot. Defaults to 'oKda' (200 Char Limit).",
+            "value": "oKda",
+            "required": false
+        },
+        "REDIRECT_TO":{
+            "description": "Username of the channel without '@' to send files and redirect users to. Deafults to 0 (no redirect).",
+            "value": "oKda",
             "required": false
         }
     },
